# cdreader

./: README.md  pyproject.toml  setup.sh
src/cdripper/: __init__.py
