[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cdripper"
dynamic = ["version"]
description = "Rip audio CDs to FLAC with MusicBrainz metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "discid",
    "musicbrainzngs",
    "mutagen",
]

[project.scripts]
cdripper = "cdripper:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/aaronsb/cdreader"
